Finished first step album still crash remaining while get artist picture some time

--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -25,7 +25,7 @@
 
     <fragment
         android:id="@+id/albumDetailFragment"
-        android:name="com.deezer.test.albumdetail.AlbumDetailFragment"
+        android:name="com.deezer.test.albumdetail.view.AlbumDetailFragment"
         android:label="Album Detail"
         tools:layout="@layout/fragment_album_detail" />
 </navigation>
