--- a/android/design/src/main/res/values/colors.xml
+++ b/android/design/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#ffbb57</color>
+    <color name="colorPrimaryDark">#c88b27</color>
+    <color name="colorAccent">#fa5bff</color>
 
     <color name="textLight">#FFFFFF</color>
     <color name="textDark">#000000</color>
