--- a/android/features/albumdetail/src/main/res/layout/fragment_album_detail.xml
+++ b/android/features/albumdetail/src/main/res/layout/fragment_album_detail.xml
@@ -33,39 +33,65 @@
         app:layout_constraintLeft_toRightOf="@id/albumDetailAlbumCoverImage"
         tools:src="@drawable/ic_album_placeholder" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/albumDetailAlbumNameText"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginLeft="@dimen/medium_gap"
         style="@style/TextAppearance.AppCompat.Headline"
         android:textStyle="bold"
+        android:singleLine="true"
+        android:ellipsize="marquee"
         tools:text="The who"
         android:gravity="center_vertical"
         app:layout_constraintTop_toTopOf="@+id/albumDetailAlbumCoverImage"
         app:layout_constraintBottom_toTopOf="@+id/albumDetailArtistImage"
         app:layout_constraintLeft_toRightOf="@+id/albumDetailAlbumCoverImage"
         app:layout_constraintRight_toRightOf="parent"/>
-    <TextView
+
+
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/albumDetailAlbumDetailsText"
         style="@style/TextAppearance.AppCompat.Subhead"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/medium_gap"
         android:ellipsize="marquee"
+        android:singleLine="true"
         app:layout_constraintBottom_toBottomOf="@+id/albumDetailArtistImage"
         app:layout_constraintLeft_toRightOf="@+id/albumDetailArtistImage"
+        app:layout_constraintRight_toRightOf="parent"
         tools:text="16 tracks, 16/02/2020" />
 
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/albumDetailArtistNameText"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/tiny_gap"
+        android:layout_marginLeft="@dimen/medium_gap"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/albumDetailAlbumDetailsText"
-        app:layout_constraintLeft_toLeftOf="@+id/albumDetailAlbumDetailsText"
+        app:layout_constraintTop_toTopOf="@+id/albumDetailArtistImage"
+        app:layout_constraintLeft_toRightOf="@+id/albumDetailArtistImage"
         tools:text="John Doe" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/albumDetailHeaderGroup"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:constraint_referenced_ids="albumDetailAlbumCoverImage,albumDetailAlbumDetailsText, albumDetailAlbumNameText, albumDetailArtistImage, albumDetailArtistNameText, albumDetailAlbumExplicitIcon"/>
+
+    <androidx.appcompat.widget.AppCompatTextView
+        android:id="@+id/albumDetailErrorText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
