--- a/android/features/albumlist/src/main/res/layout/fragment_album_list.xml
+++ b/android/features/albumlist/src/main/res/layout/fragment_album_list.xml
@@ -14,4 +14,16 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/albumListFragmentErrorText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:gravity="center"
+        style="@style/TextAppearance.AppCompat.Headline"
+        android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
