add loading dots, github page, bottom bar view

--- a/android/app/src/main/res/navigation/nav_graph.xml
+++ b/android/app/src/main/res/navigation/nav_graph.xml
@@ -28,4 +28,11 @@
         android:name="com.deezer.test.albumdetail.view.AlbumDetailFragment"
         android:label="Album Detail"
         tools:layout="@layout/fragment_album_detail" />
+
+    <fragment
+        android:id="@+id/githubFragment"
+        android:name="com.deezer.test.github.GithubFragment"
+        android:label="Project Page"
+        tools:layout="@layout/fragment_github" />
+
 </navigation>
