--- a/android/features/albumdetail/src/main/res/layout/fragment_album_detail.xml
+++ b/android/features/albumdetail/src/main/res/layout/fragment_album_detail.xml
@@ -94,4 +94,14 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
 
+    <FrameLayout
+        android:id="@+id/albumDetailTracklistFragmentHolder"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="@dimen/huge_gap"
+        app:layout_constraintTop_toBottomOf="@+id/albumDetailAlbumCoverImage"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
