implemented dots loader and error display for tracklist

--- a/android/app/src/main/res/menu/bottom_bar_menu.xml
+++ b/android/app/src/main/res/menu/bottom_bar_menu.xml
@@ -12,6 +12,6 @@
         android:id="@+id/githubFragment"
         android:enabled="true"
         android:icon="@drawable/ic_web"
-        android:title="Albums"
+        android:title="Github"
         app:showAsAction="ifRoom"/>
 </menu>
