--- a/features/tracklist/src/main/res/layout/view_tracklist_header_row.xml
+++ b/features/tracklist/src/main/res/layout/view_tracklist_header_row.xml
@@ -9,7 +9,7 @@
         android:id="@+id/trackTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Title"
+        android:text="@string/tracklist_header_row_title"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_marginLeft="@dimen/huge_gap"
         android:layout_marginTop="@dimen/medium_gap"
@@ -22,7 +22,7 @@
         android:id="@+id/trackDuration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Duration"
+        android:text="@string/tracklist_header_row_duration"
         style="@style/TextAppearance.AppCompat.Subhead"
         android:layout_marginRight="@dimen/huge_gap"
         android:layout_marginTop="@dimen/medium_gap"
