add tests for viewModels and add mvvm to tracklist

--- a/features/albumlist/src/main/res/layout/fragment_album_list.xml
+++ b/features/albumlist/src/main/res/layout/fragment_album_list.xml
@@ -5,7 +5,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.deezer.test.albumlist.view.AlbumListViewModel" />
+            type="com.deezer.test.albumlist.AlbumListViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
